--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -97,9 +97,9 @@ section {
     color: #150042;
     border-radius: 50px;
     padding: 9px 45px 6px;
-    font-size: 1.6em;
+    font-size: 1.2em;
     transition: all .2s;
-    width: 159px;
+    width: 129px;
     border: none;
     display: flex;
     align-items: center;
@@ -114,7 +114,7 @@ section {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 166px;
+    width: 136px;
     margin-bottom: 5px;
     margin-left: 12px;
 }
@@ -281,6 +281,76 @@ section {
     background-image: linear-gradient(97deg, #00a6ff, #00d0ff 50%, #40ffdf);
     background-clip: text;
     -webkit-text-fill-color: transparent;
+}
+
+@media (max-width: 768px) {
+    #einleitung .einleitung-bereich {
+        margin-right: auto;
+        margin-left: auto;
+    }
+}
+
+@media (max-width: 575px) {
+    #einleitung .einleitung-title h1 {
+        font-size: 4rem;
+    }
+
+    #einleitung .einleitung-title h1:nth-of-type(2) {
+        top: -40px;
+    }
+
+    #einleitung .einleitung-title h1:nth-of-type(3) {
+        top: -40px;
+    }
+
+    #einleitung .einleitung-text {
+        font-size: 1rem;
+        top: -76px;
+    }
+
+    #einleitung .einleitung-bereich {
+        width: 80%;
+    }
+
+    #einleitung .einleitung-title {
+        width: 110%;
+    }
+}
+
+@media (max-width: 468px) {
+    #einleitung .einleitung-title h1 {
+        font-size: 3.2rem;
+    }
+
+    #einleitung .einleitung-title h1:nth-of-type(2) {
+        top: -30px;
+    }
+
+    #einleitung .einleitung-title h1:nth-of-type(3) {
+        top: -30px;
+    }
+
+    #einleitung .einleitung-text {
+        top: -60px;
+    }
+}
+
+@media (max-width: 376px) {
+    #einleitung .einleitung-title h1 {
+        font-size: 2.2rem;
+    }
+
+    #einleitung .einleitung-title h1:nth-of-type(2) {
+        top: -20px;
+    }
+
+    #einleitung .einleitung-title h1:nth-of-type(3) {
+        top: -20px;
+    }
+
+    #einleitung .einleitung-text {
+        top: -45px;
+    }
 }
 
 /* === KONTAKT-BEREICH === */
