--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -205,6 +205,7 @@ section {
 #header-nav ul > li > a:active {
     color: #000000;
     text-decoration: none;
+    background: none;
 }
 
 #header-nav .col-6 {
