--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -206,6 +206,11 @@ section {
     color: #000000;
     text-decoration: none;
     touch-action: manipulation;
+    pointer-events: none;
+}
+
+#header-nav ul > li > a:focus {
+    pointer-events: none;
 }
 
 #header-nav .col-6 {
