--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -413,6 +413,34 @@ section {
     font-weight: 400;
 }
 
+@media (max-width: 575px) {
+    #about h1 {
+        font-size: 4rem;
+    }
+
+    #about .about-text {
+        font-size: 1rem;
+    }
+
+    #about .about-bereich {
+        width: 80%;
+        margin-right: auto;
+        margin-left: auto;
+    }
+}
+
+@media (max-width: 468px) {
+    #about h1 {
+        font-size: 3.2rem;
+    }
+}
+
+@media (max-width: 376px) {
+    #about h1 {
+        font-size: 2.2rem;
+    }
+}
+
 /* === KONTAKT-BEREICH === */
 
 #kontakt label {
@@ -451,6 +479,24 @@ section {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 4rem;
+}
+
+@media (max-width: 575px) {
+    #kontakt h1 {
+        font-size: 4rem;
+    }
+}
+
+@media (max-width: 468px) {
+    #kontakt h1 {
+        font-size: 3.2rem;
+    }
+}
+
+@media (max-width: 376px) {
+    #kontakt h1 {
+        font-size: 2.2rem;
+    }
 }
 
 @media (max-width: 1366px) {
