--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -354,6 +354,10 @@ section {
         margin-top: -50px;
         height: 500px;
     }
+
+    #einleitung {
+        margin-top: 80px;
+    }
 }
 
 @media (max-width: 575px) {
