--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,10 @@
 /* === GLOBAL === */
 
+.no-hover *:hover {
+    pointer-events: none !important;
+}
+
+
 html {
     font-size: 16px;
 }
@@ -233,13 +238,6 @@ section {
 }
 
 #header-nav ul > li > a:hover {
-    background-image: linear-gradient(97deg, #00a6ff, #00d0ff 50%, #40ffdf);
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-    text-decoration: none;
-}
-
-.touch-hover-effect {
     background-image: linear-gradient(97deg, #00a6ff, #00d0ff 50%, #40ffdf);
     background-clip: text;
     -webkit-text-fill-color: transparent;
