--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -130,6 +130,38 @@ section {
     background-color: transparent;
 }
 
+.back-button {
+    background: #f2f7fc;
+    color: #150042;
+    border-radius: 50px;
+    padding: 9px 45px 6px;
+    font-size: 1.2em;
+    transition: all .2s;
+    width: 128px;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.div-back-button {
+    background-image: linear-gradient(to right, #00a6ff, #00d0ff 55%, #40ffdf);
+    border-radius: 50px;
+    padding: 3px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 136px;
+    margin-bottom: 5px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.back-button:hover {
+    background-color: transparent;
+}
+
 .kontakt-button {
     background: #150042;
     color: #f6f6f6;
@@ -626,4 +658,38 @@ section {
     #footer {
         text-align: center;
     }
+}
+
+/* === SUBMIT SITE === */
+
+#submit-message {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    text-align: center;
+    margin-top: 100px;
+}
+
+#submit-message .haken {
+    background-color: rgb(10, 206, 0);
+    border-radius: 9999px;
+    color: white;
+    display: block;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70px;
+    height: 70px;
+    font-size: 40px;
+    margin-top: 20px;
+}
+
+#submit-message .haken p {
+    margin-top: 5px;
+    display: inline-block;
+}
+
+#submit-message a {
+    text-decoration: none;
+    color: #000000;
 }
