--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -339,6 +339,7 @@ section, header#einleitung {
 
 #einleitung {
     margin-top: var(--section-margin-top);
+    display: inline;
 }
 
 #einleitung .einleitung-bereich {
@@ -417,7 +418,7 @@ section, header#einleitung {
         display: block;
         margin-left: auto;
         margin-right: auto;
-        margin-top: -50px;
+        margin-top: -300px;
         height: 500px;
     }
 
@@ -454,6 +455,7 @@ section, header#einleitung {
 
     #einleitung .einleitung-bild .portrait {
         height: 400px;
+        margin-top: -450px;
     }
 }
 
